# nsloader

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
include/: nsloader.h  swap.h
include/core/: system.h
include/core/cpu/: cpu.h
include/core/debugger/: gdbstub.h
include/core/hle/kernel/: proc.h  proc_memory.h
include/core/hle/loader/: loader.h  nso.h
include/hle/: hle.h
include/hle/loader/: loader.h  nso.h
include/utils/: log.h  mmapped_file.h
src/: CMakeLists.txt  main.cc
src/cli/: CMakeLists.txt
src/core/: CMakeLists.txt  system.cc
src/core/arm/: CMakeLists.txt  arm_interface.cc
src/core/cpu/: CMakeLists.txt  cpu.cc
src/core/debugger/: CMakeLists.txt  gdbstub.c
src/core/hle/: CMakeLists.txt
src/core/hle/kernel/: CMakeLists.txt  proc.cc  proc_memory.cc
src/core/hle/loader/: CMakeLists.txt  loader.cc  nso.cc
src/hle/: CMakeLists.txt  hle.cc
src/hle/loader/: loader.cc  nso.cc
src/utils/: CMakeLists.txt  log.cc  mmapped_file.cc
